--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,6 @@ jobs:
 
             # run tests!
             - run: mvn integration-test
+
+            - deploy:
+                  command: bash <(curl -s https://copilot.blackducksoftware.com/ci/circle2/scripts/upload)
